force-app/main/default/objects/p2s_base1__AccountStatusSetting__c/p2s_base1__AccountStatusSetting__c.object-meta.xml
<CustomObject>
    <description>Lead Status Setting</description>
    <label>Account Status Setting</label>
    <nameField>
        <label>Account Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Status Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>