force-app/main/default/objects/p2s_base1__AccountStatusSetting__c/fields/p2s_base1__Active__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate this Account Status Mapping</description>
    <inlineHelpText>Activate the Account Status Mapping</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>