force-app/main/default/objects/p2s_base1__AccountStatusSetting__c/fields/p2s_base1__Configuration__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>p2s_base1__Configuration__c</referenceTo>
    <relationshipLabel>Account Status Settings</relationshipLabel>
    <relationshipName>Account_Status_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>