force-app/main/default/objects/p2s_base1__AccountStatusSetting__c/fields/p2s_base1__LIfecycleStage__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__LIfecycleStage__c</fullName>
    <description>Enter the Journey Stage that the Account will move to upon reaching the Account Status</description>
    <inlineHelpText>Enter the Journey Stage that the Account will move to upon reaching the Account Status</inlineHelpText>
    <label>Account Journey Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>p2s_base1__LifecycleStage</valueSetName>
    </valueSet>
</CustomField>